--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,45 @@
-srclib/
+# archivos varios
+.svn/
+map2tileset/
+Thumbs.db
+Tilengine.doc
+Tilengine.sln
+clean.bat
+
+# archivos de visual studio
 Debug/
 Release/
-Thumbs.db
-*.doc
+obj/
 *.ncb
 *.user
 *.pdb
 *.ilk
 *.exp
 *.suo
+*.o
+
+# fuentes lib
+doxygen/
+libpng/
+sdl/
+Makefile_*
+Tilengine.dev
+Animation.*
+Bitmap.*
+Blitters.*
+Draw.*
+Engine.h
+Layer.*
+Math2D.*
+Object.*
+Palette.*
+Sequence.*
+SequencePack.*
+Sprite.*
+Spriteset.*
+Tables.*
+Tilemap.*
+Tilengine.c
+Tileset.*
+Types.h
+Tilengine.vcproj
