--- a/bindings/java/src_jni/Makefile_raspbian
+++ b/bindings/java/src_jni/Makefile_raspbian
@@ -1,14 +1,13 @@
 CC       = gcc
 SOURCES  = $(wildcard *.c)
 OBJECTS  = $(SOURCES:.c=.o)
-PLATFORM = linux
+PLATFORM = raspbian
 JAVA_HOME= /usr/lib/jvm/jdk-8-oracle-arm32-vfp-hflt
-INCS     = -I"$(JAVA_HOME)/include" -I"$(JAVA_HOME)/include/$(PLATFORM)"
+INCS     = -I"$(JAVA_HOME)/include" -I"$(JAVA_HOME)/include/linux"
 LIBS     = -lTilengine -lc
 BIN      = libTilengineJNI.so
 CFLAGS   = $(INCS) -std=c99 -fpic -O2
 RM       = rm
-libpath  = /usr/lib/arm-linux-gnueabihf
 
 .PHONY: all all-before all-after clean clean-custom
 
@@ -18,13 +17,7 @@ clean: clean-custom
 	${RM} $(OBJECTS) $(BIN)
 
 $(BIN): $(OBJECTS)
-	$(CC) -shared $(OBJECTS) -o $(BIN) $(LIBS) -s -fvisibility=hidden
+	$(CC) -shared $(OBJECTS) -o ../bin/$(PLATFORM)/$(BIN) $(LIBS) -s -fvisibility=hidden
 
 %.o: %.c
 	$(CC) -c $(CFLAGS) $< -o $@
-
-install: $(BIN)
-	cp $(BIN) ../bin/raspbian
-	cp $(BIN) $(libpath)
-	chmod a+x $(libpath)/$(BIN)
-	
