Linux: removed shared libpng dependence
Tilengine now builds with libpng statically linked inside, just as the
Windows and MacOS did already. This avoids the "dll hell" in linux when
some distros switch between libpng12 and libpng16

--- a/src_lib/Makefile_linux64
+++ b/src_lib/Makefile_linux64
@@ -1,10 +1,14 @@
 CC       = gcc
 SOURCES  = $(wildcard *.c)
 OBJECTS  = $(SOURCES:.c=.o)
-LIBS     = -lpng -lSDL2 -lc -lz
+LIBS     = -lSDL2 -lc -lz ./libpng16.a
 BIN      = libTilengine.so
 CFLAGS   = -msse2 -m64 -std=c99 -fpic -O2 -DLIB_EXPORTS
 RM       = rm
+header 	 = Tilengine.h
+incpath  = /usr/include
+libpath  = /usr/lib/x86_64-linux-gnu
+
 
 .PHONY: all all-before all-after clean clean-custom
 
