--- a/src_lib/Makefile_linux
+++ b/src_lib/Makefile_linux
@@ -1,10 +1,14 @@
 CC       = gcc
 SOURCES  = $(wildcard *.c)
 OBJECTS  = $(SOURCES:.c=.o)
-LIBS     = -lpng -lSDL2 -lc -lz
+LIBS     = -lSDL2 -lc -lz ./libpng/libpng16.a
 BIN      = libTilengine.so
-CFLAGS   = -msse2 -m32 -std=c99 -fpic -O2 -DLIB_EXPORTS
+CFLAGS   = -msse2 -m32 -std=c99 -fpic -O2 -DLIB_EXPORTS -I"libpng"
 RM       = rm
+header 	 = Tilengine.h
+incpath  = /usr/include
+libpath  = /usr/lib/i386-linux-gnu
+
 
 .PHONY: all all-before all-after clean clean-custom
 
