v 1.14.0 - Enhanced Tiled integration
* Loads Tileset from Tilemap and attaches a reference
* Loads background color attribute from Tilemap
* Loads SequencePack from Tileset with pattern animations and attaches a
reference
* Loads the type of tile in Tileset, via custom attribute: "type"
integer in range 0-255
* New struture SequenceFrame to build Sequence objects at runtime, with
delay per-frame
* Deleted old TLN_Cycle object, unified its functionality to Sequence
object
* Extended TLN_TileInfo struct with new members to tell the type of a
tile and if a given cell is empty
* Added TLN_SetLayerMap() function to setup a layer only with a Tilemap
reference, it extracts and loads the attached Tileset automatically
* Added TLN_SetBGColorFromTilemap() function to set the background color
from a given Tilemap
* Added new functions to retrieve the new associations between objects
(Tileset -> Tilemap -> SequencePack), the dimensions of a layer in
pixels, the number of sequences in a SequencePack, and to query the
contained sequences by an index
* Updated Python and C# bindings
* Added resources for the dkc.py sample

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ benchmark.txt
 android/lib
 android/wrapper/obj
 deploy/
+debug/
+release/
+Win32_Debug/
+Win32_Release/
+x64_Debug/
+x64_Release/
 *.pyc
 
 # archivos de visual studio
