Setup Travis-CI integration * Unifies set of different library makefiles to one single Makefile * Replaces prebuilt static libpng.a with system installed libpng package

--- a/samples/c/Makefile
+++ b/samples/c/Makefile
@@ -2,32 +2,37 @@ CC       = gcc
 SOURCES  = $(wildcard *.c)
 OBJECTS  = $(SOURCES:.c=.o)
 TARGETS  = barrel mode7 platformer racer scaling shadow shooter tutorial wobble colorcycle benchmark supermarioclone test_mouse
+LIBPATH  = $(HOME)/Tilengine/lib
 
+# Windows specific flags
 ifeq ($(OS),Windows_NT)
 	RM = del /Q *.exe
-	CFLAGS  = -m32 -msse2 -std=c99 -O2 -I"../../include"
+	CFLAGS  = -m32 -msse2
 	LDFLAGS = ../../lib/win32/Tilengine.lib -s
 else
 	RM = rm
 	name := $(shell uname -s)
 	arch := $(shell uname -m)
+	
+	# Linux specific flags (i686, x64 and arm)
 	ifeq ($(name),Linux)
 		ifeq ($(arch),i686)
-			CFLAGS = -m32 -msse2 -std=c99 -O2
+			CFLAGS = -m32 -msse2
 		endif
 		ifeq ($(arch),x86_64)
-			CFLAGS = -m64 -msse2 -std=c99 -O2
+			CFLAGS = -m64 -msse2
 		endif
-		ifeq ($(arch),armv7l)
-			CFLAGS = -std=c99 -O2
-		endif
-		LDFLAGS = -lTilengine -lm -s
+		LDFLAGS = -L$(LIBPATH) -lTilengine -lm -s -Wl,-rpath,$(LIBPATH)
 	endif
+	
+	# OSX specific flags
 	ifeq ($(name),Darwin)
-		CFLAGS = -std=c99 -O2
 		LDFLAGS = "/usr/local/lib/Tilengine.dylib" -lm
 	endif
 endif
+
+# common C flags
+CFLAGS += -I"../../include" -std=c99 -O2
 
 .PHONY: all all-before all-after clean clean-custom
 
