--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: c
 compiler: gcc
 
-install:
+before-install:
+- sudo apt-get update -qq
+- sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev
 - sudo apt-get install libsdl2-dev libpng-dev
 
 script:
