Fixes wrong syntax in last travis commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 compiler: gcc
 
-before-install:
+before_install:
 - sudo apt-get update -qq
 - sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev
 - sudo apt-get install libsdl2-dev libpng-dev
