--- a/src_lib/Tilengine.vcxproj.filters
+++ b/src_lib/Tilengine.vcxproj.filters
@@ -157,5 +157,8 @@
     <ClInclude Include="Tileset.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Tilengine.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
